<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cart_card_image"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/laser_pointer"/>

        <TextView
            android:id="@+id/cart_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/cart_card_image"
            android:layout_margin="10dp"
            android:text="Name"/>

        <TextView
            android:id="@+id/cart_card_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:text="$49.99"/>

        <ImageView
            android:id="@+id/cart_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:src="@drawable/cart_increase"/>

        <TextView
            android:id="@+id/cart_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cart_increase"
            android:text="0"
            android:layout_margin="4dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/cart_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cart_count"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:src="@drawable/cart_decrease"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>